<resources>
    <string name="app_name">AndroidDSA</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in_button">Log in</string>
    <string name="do_you_not_have_an_account">Do you not have an account?</string>
    <string name="register">Register</string>
    <string name="register_title">Register</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="password_reg">Password</string>
    <string name="gmail">Gmail</string>
    <string name="username_reg">Username</string>
    <string name="ok">ok</string>
    <string name="cancel">Cancel</string>
    <string name="gmail_log">Gmail</string>
    <string name="birth_date">Birth date</string>
    <string name="list_of_objects">List of objects</string>
    <string name="textview">TextView</string>
    <string name="title_object">Title object</string>
    <string name="textview_details">TextView</string>
    <string name="list_of_characters">List of Characters</string>
    <string name="character">Character</string>
    <string name="textviewDetailsCharacter">Detail Character</string>
    <string name="cerrar_sesi_n">Close Session</string>
    <string name="cerrar_sesi_ngggg">Close Session</string>
    <string name="spn_title">Choose a language</string>
    <string-array name="dlangs">
        <item name="Spanish">Spanish</item>
        <item name="English">English</item>
        <item name="Italian">Italian</item>
        <item name="French">French</item>
        <item name="Portuguese">Portuguese</item>
    </string-array>
    <string name="btnConfChanges">Apply Changes</string>
    <string name="jugar">Play</string>
    <string name="tienda">Shop</string>
    <string name="lista">List</string>
    <string name="play">Play</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="objetos">Objects</string>
    <string name="personajes">Characters</string>
    <string name="Friends">Friends</string>
    <string name="Profile">Profile</string>
    <string name="Apply_Changes">Apply Changes</string>
    <string name="Repeat_Password">Repeat Password</string>
    <string name="Stop_music">Stop the music</string>
    <string name="Play_music">Play the music</string>
    <string name="title_user">Title User</string>
    <string name="empezarJuego">Jugar</string>
    <string name="denunciar_abuso">Denunciar abuso</string>
    <string name="nameAbuso">Name</string>
    <string name="messageAbuso">Message</string>
    <string name="send">Send</string>
    <string name="enviar">enviar</string>
    <string name="ver_la_lista_de_todos_los_abusos">Ver la lista de todos los abusos</string>
    <string name="volver">volver</string>
</resources>